--- a/index.html
+++ b/index.html
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>StudioVisual | Home</title>
-    <link rel="stylesheet" href="./Css/style.css">
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="./css/style.css" />
+  </head>
+  <body>
+    <div class="navstyle">
+      <div class="navbar">
+        <img
+          src="./assests/Navass/vizuall-logo-icon.png"
+          alt="Vizuall logo icon"
+          width="111px"
+          height="29px"
+        />
+        <div class="topnav">
+          <a class="active" href="./index.html">Visie</a>
+          <a href="./werk.html">Werk</a>
+          <a href="./over-ons.html">Over ons</a>
+          <div>
+            <a href="./contact.html">Contact</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
