--- a/index.html
+++ b/index.html
@@ -19,10 +19,8 @@
           <a class="active" href="./index.html">Visie</a>
           <a href="./werk.html">Werk</a>
           <a href="./over-ons.html">Over ons</a>
-          <div>
-            <a href="./contact.html">Contact</a>
-          </div>
         </div>
+        <a class="contact" href="./contact.html">Contact</a>
       </div>
     </div>
   </body>
