--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     />
   </head>
   <body class="bg-white text-white font-normal font-['Poppins']">
-    <div class="bg-[#463df5] rounded-bl-[100px] rounded-br-[100px]">
+    <div class="order-1 bg-[#463df5] rounded-bl-[100px] rounded-br-[100px]">
     <!-- Navigation bar -->
       <nav>
         <div class="flex items-center justify-center space-x-80 px-[18px] py-8 bg-[#efefee] rounded-bl-[50px] rounded-br-[50px] text-2xl" >
@@ -23,19 +23,22 @@
             <div>
               <ul class="flex text-[#463df5] space-x-10">
 
-                  <li><a href="./Visie.html">Visie</a></li>
-                  <li><a href="./werk.html">Werk</a></li>
-                  <li><a href="./over-ons.html">Over ons</a> </li>
+                  <li><button class="hover:font-semibold hover:duration-500 hover:border-b-4 hover:border-white" href="./Visie.html">Visie</button></li>
+                  <li><button class="hover:font-semibold hover:duration-500 hover:border-b-4 hover:border-white" href="./werk.html">Werk</button></li>
+                  <li><button class="hover:font-semibold hover:duration-500 hover:border-b-4 hover:border-white" href="./over-ons.html">Over ons</button> </li>
                 </li>
               </ul>
             </div> 
-          <a class="text-[#463df5] rounded-[23px] border border-[#463df5] px-8 py-[13px] text-2xl " href="./contact.html">Contact</a>
+          <button class="text-[#463df5] rounded-[23px] border border-[#463df5] px-8 py-[13px] text-2xl hover:bg-[#463df5] hover:text-[#efefee] hover:duration-700 " href="./contact.html">Contact</button>
         </div>
       </nav>
     <!-- Hero section -->
-     <div class="flex items-center justify-center">
+      <div class="flex items-center justify-center user-drag:none">
         <img src="./assests/Navass/StudioVizuall_animatie_transparant.gif" alt="">
-     </div>
+      </div>     
+  </div>      
+    <div class="h-[1832px] bg-[#171616] rounded-[100px]">
+      <h1 class="flex justify-center items-center">This is text</h1>
     </div>
     <!-- The Quote and info-->
     <!-- The carousel -->
