--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>StudioVisual | Home</title>
-    <link rel="stylesheet" href="./Css/style.css" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -13,34 +12,44 @@
       rel="stylesheet"
     />
   </head>
-  <body class="bg-white text-white font-normal font-['Poppins']">
-    <div class="order-1 bg-[#463df5] rounded-bl-[100px] rounded-br-[100px]">
-    <!-- Navigation bar -->
+  <body class="bg-white text-white font-['Poppins']">
+    <div class="bg-[#463df5] rounded-bl-[100px] rounded-br-[100px]">
+      <!-- Navigation bar -->
       <nav>
-        <div class="flex items-center justify-center space-x-80 px-[18px] py-8 bg-[#efefee] rounded-bl-[50px] rounded-br-[50px] text-2xl" >
-          <!-- Desktop Nav -->
-            <a href="./index.html"><img src="./assests/Navass/vizuall-logo-icon.png" alt=""></a>
-            <div>
-              <ul class="flex text-[#463df5] space-x-10">
-
-                  <li><button class="hover:font-semibold hover:duration-500 hover:border-b-4 hover:border-white" href="./Visie.html">Visie</button></li>
-                  <li><button class="hover:font-semibold hover:duration-500 hover:border-b-4 hover:border-white" href="./werk.html">Werk</button></li>
-                  <li><button class="hover:font-semibold hover:duration-500 hover:border-b-4 hover:border-white" href="./over-ons.html">Over ons</button> </li>
-                </li>
-              </ul>
-            </div> 
-          <button class="text-[#463df5] rounded-[23px] border border-[#463df5] px-8 py-[13px] text-2xl hover:bg-[#463df5] hover:text-[#efefee] hover:duration-700 " href="./contact.html">Contact</button>
+        <div class="flex flex-wrap items-center justify-between px-6 py-6 bg-[#efefee] rounded-bl-[50px] rounded-br-[50px] text-xl md:px-12">
+          <!-- Logo -->
+          <a href="./index.html">
+            <img src="./assests/Navass/vizuall-logo-icon.png" alt="Logo" class="h-12 md:h-16">
+          </a>
+          <!-- Mobile Menu Button -->
+          <button id="menu-btn" class="block md:hidden text-[#463df5] text-3xl">&#9776;</button>
+          <!-- Desktop & Mobile Menu -->
+          <div id="menu" class="hidden md:flex md:items-center md:space-x-8 text-[#463df5]">
+            <ul class="flex flex-col md:flex-row space-y-4 md:space-y-0 md:space-x-10 text-lg">
+              <li><a class="hover:font-semibold hover:border-b-4 border-white transition duration-500" href="./Visie.html">Visie</a></li>
+              <li><a class="hover:font-semibold hover:border-b-4 border-white transition duration-500" href="./werk.html">Werk</a></li>
+              <li><a class="hover:font-semibold hover:border-b-4 border-white transition duration-500" href="./over-ons.html">Over ons</a></li>
+            </ul>
+          </div>
+          <!-- Contact Button -->
+          <a href="./contact.html" class="hidden md:inline-block text-[#463df5] rounded-full border border-[#463df5] px-6 py-2 text-lg hover:bg-[#463df5] hover:text-white transition duration-700">Contact</a>
         </div>
       </nav>
-    <!-- Hero section -->
-      <div class="flex items-center justify-center user-drag:none">
-        <img src="./assests/Navass/StudioVizuall_animatie_transparant.gif" alt="">
-      </div>     
-  </div>      
-    <div class="h-[1832px] bg-[#171616] rounded-[100px]">
-      <h1 class="flex justify-center items-center">This is text</h1>
+      <!-- Hero section -->
+      <div class="flex items-center justify-center p-6">
+        <img src="./assests/Navass/StudioVizuall_animatie_transparant.gif" alt="Animatie" class="w-full max-w-md md:max-w-xl lg:max-w-2xl">
+      </div>
     </div>
-    <!-- The Quote and info-->
-    <!-- The carousel -->
+    
+    <!-- Content Section -->
+    <div class="h-auto bg-[#171616] rounded-[100px] p-6 text-center">
+      <h1 class="text-3xl text-white">This is text</h1>
+    </div>
+
+    <script>
+      document.getElementById('menu-btn').addEventListener('click', function() {
+        document.getElementById('menu').classList.toggle('hidden');
+      });
+    </script>
   </body>
 </html>
