--- a/index.html
+++ b/index.html
@@ -11,6 +11,21 @@
       href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
+    <style>
+      .menu-transition {
+        transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
+      }
+      .hidden-menu {
+        transform: translateY(-20px);
+        opacity: 0;
+        display: none;
+      }
+      .visible-menu {
+        transform: translateY(0);
+        opacity: 1;
+        display: block;
+      }
+    </style>
   </head>
   <body class="bg-white text-white font-['Poppins']">
     <div class="bg-[#463df5] rounded-bl-[100px] rounded-br-[100px]">
@@ -24,7 +39,7 @@
           <!-- Mobile Menu Button -->
           <button id="menu-btn" class="block md:hidden text-[#463df5] text-3xl">&#9776;</button>
           <!-- Desktop & Mobile Menu -->
-          <div id="menu" class="hidden md:flex md:items-center md:space-x-8 text-[#463df5]">
+          <div id="menu" class="hidden-menu menu-transition md:flex md:items-center md:space-x-8 text-[#463df5]">
             <ul class="flex flex-col md:flex-row space-y-4 md:space-y-0 md:space-x-10 text-lg">
               <li><a class="hover:font-semibold hover:border-b-4 border-white transition duration-500" href="./Visie.html">Visie</a></li>
               <li><a class="hover:font-semibold hover:border-b-4 border-white transition duration-500" href="./werk.html">Werk</a></li>
@@ -48,7 +63,14 @@
 
     <script>
       document.getElementById('menu-btn').addEventListener('click', function() {
-        document.getElementById('menu').classList.toggle('hidden');
+        const menu = document.getElementById('menu');
+        if (menu.classList.contains('hidden-menu')) {
+          menu.classList.remove('hidden-menu');
+          menu.classList.add('visible-menu');
+        } else {
+          menu.classList.remove('visible-menu');
+          menu.classList.add('hidden-menu');
+        }
       });
     </script>
   </body>
